# MiniRedis

./: .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake  tools.cmake
include/miniredis/: miniredis.hpp
src/: miniredis.cpp
test/: CMakeLists.txt
test/src/: main.cpp  miniredis.cpp  test_miniredis.cpp
